changed css to scss + working on home css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,23 @@
 </head>
 
 <body>
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))>
+<img src="background_image_banner.jpg" />
+  <div class="container">
+    <h1>Welcome to Arthouse Auctions!</h1>
+    <p>Buy and sell art the easy way.</p>
+    <a class="btn btn-ghost" href="#">Sign up</a>
+    <a class="btn btn-ghost" href="#">Sign in</a>
+  </div>
+</div>
+
+<h1>Discover the latest auctions</h1>
+  <p>Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. uy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. </p>
+
+<!-- ____________________________   -->
+<!--   <h1>Pages#home</h1>
+  <p>Find me in app/views/pages/home.html.erb</p> -->
   <!-- Navbar -->
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <a class="navbar-brand" href="#">
@@ -22,7 +37,8 @@
     </button>
 
   <!-- Button -->
-  <a class="btn btn-ghost" href="#">Write a story</a>
+  <a class="btn btn-ghost" href="#">Sign in</a>
+  <a class="btn btn-ghost" href="#">Sign up</a>
 
   <!-- Card -->
   <div class="card-product">
