--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,10 +20,10 @@
     <a class="btn btn-ghost" href="#">Sign in</a>
   </div>
 </div>
-
-<h1>Discover the latest auctions</h1>
+<div class="welcome-text">
+  <h1>Discover the latest auctions</h1>
   <p>Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. uy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. </p>
-
+</div>
 <!-- ____________________________   -->
 <!--   <h1>Pages#home</h1>
   <p>Find me in app/views/pages/home.html.erb</p> -->
