--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!-- This is our main HTML file. Everytime we trigger a view we get the HEAD and the YIELD. The YIELD is where HOME is rendered. -->
 <!DOCTYPE html>
 <html>
   <head>
