--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="assets/style.css">
+<!-- <link rel="stylesheet" href="assets/style.css">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,84 +9,85 @@
   <title>Document</title>
 </head>
 
-<body>
+<body> -->
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))>
-<img src="background_image_banner.jpg" />
+  <!-- We don't need a head for our HOME page as we have everything in applicaiton.html.erb -->
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://desmondtdoss.org/wp-content/uploads/2015/10/night-sky.jpg)">
   <div class="container">
-    <h1>Welcome to Arthouse Auctions!</h1>
-    <p>Buy and sell art the easy way.</p>
-    <a class="btn btn-ghost" href="#">Sign up</a>
-    <a class="btn btn-ghost" href="#">Sign in</a>
+    <h1>Welcome to Art House Auctions!</h1>
+    <p>Buy & sell art the easy way.</p>
+    <a class="btn btn-ghost" href="#">Find out more</a>
+    <!-- <a class="btn btn-ghost" href="#">Sign in</a> -->
   </div>
 </div>
-
-<h1>Discover the latest auctions</h1>
+<div class="container">
+  <h1>Discover the latest auctions</h1>
   <p>Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. uy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. </p>
 
 <!-- ____________________________   -->
-<!--   <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p> -->
+  <h1>Art to choose from</h1>
+  <p>Explore the magic world of creating...</p>
   <!-- Navbar -->
-  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+ <!--  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <a class="navbar-brand" href="#">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
   </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
 
   <!-- Button -->
-  <a class="btn btn-ghost" href="#">Sign in</a>
+  <!-- <a class="btn btn-ghost" href="#">Sign in</a>
   <a class="btn btn-ghost" href="#">Sign up</a>
-
+ -->
   <!-- Card -->
-  <div class="card-product">
+  <!-- <div class="card-product">
     <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     <div class="card-product-infos">
       <h2>Product name</h2>
       <p>Product description with <strong>relevant info</strong> only.</p>
     </div>
-  </div>
+  </div> -->
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+   <!--  <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Messages</a>
-        </li>
-        <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+        </li> -->
+        <!-- <li class="nav-item dropdown"> -->
+         <!--  <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-          </div>
+            <a class="dropdown-item" href="#">Another action</a> -->
+          <!-- </div>
         </li>
-      </ul>
-    </div>
-  </div>
+      </ul> -->
+    <!-- </div> -->
+  <!-- </div> -->
 
 <!-- Card category -->
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  Breakfast
-</div>
-
-<!-- Cards -->
-<div class="cards">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     Breakfast
   </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
-    Lunch
-  </div>
+  <!-- Cards -->
+  <div class="cards">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      Breakfast
+    </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
-    Dinner
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
+      Lunch
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
+      Dinner
+    </div>
   </div>
-</div>
 
   <!-- Footer -->
   <div class="footer">
@@ -98,9 +99,9 @@
       <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
     <div class="footer-copyright">
-      This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+      This footer is made with <i class="fas fa-heart"></i> at Art House Love
     </div>
   </div>
-</body>
-</html>
+</div>
+
 
