--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,106 +1,8 @@
-<link rel="stylesheet" href="assets/style.css">
+<%= render 'banner' %>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-  <title>Document</title>
-</head>
-
-<body>
-
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))>
-<img src="background_image_banner.jpg" />
-  <div class="container">
-    <h1>Welcome to Arthouse Auctions!</h1>
-    <p>Buy and sell art the easy way.</p>
-    <a class="btn btn-ghost" href="#">Sign up</a>
-    <a class="btn btn-ghost" href="#">Sign in</a>
-  </div>
-</div>
-
-<h1>Discover the latest auctions</h1>
+<div class="container-intro-text">
+  <h1>Discover the latest auctions</h1>
   <p>Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. uy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. Buy and sell art the easy way. </p>
-
-<!-- ____________________________   -->
-<!--   <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p> -->
-  <!-- Navbar -->
-  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-    <a class="navbar-brand" href="#">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
-  </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-  <!-- Button -->
-  <a class="btn btn-ghost" href="#">Sign in</a>
-  <a class="btn btn-ghost" href="#">Sign up</a>
-
-  <!-- Card -->
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
-    </div>
-  </div>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
-        </li>
-        <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-<!-- Card category -->
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  Breakfast
 </div>
 
-<!-- Cards -->
-<div class="cards">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-    Breakfast
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
-    Lunch
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
-    Dinner
-  </div>
-</div>
-
-  <!-- Footer -->
-  <div class="footer">
-    <div class="footer-links">
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-    </div>
-    <div class="footer-copyright">
-      This footer is made with <i class="fas fa-heart"></i> at Le Wagon
-    </div>
-  </div>
-</body>
-</html>
-
+<%= render 'shared/card-grid-artifact' %>
