--- a/app/views/shared/_card-grid-artifact.html.erb
+++ b/app/views/shared/_card-grid-artifact.html.erb
@@ -1,18 +1,18 @@
 <div class="card-grid-artifact">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-  <div class="card-artifact" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+  <img src="images/michael_angelo.jpg" />
+  <div class="card-artifact">
     <h2>Palace of Versailles</h2>
     <p>Michael Angelo</p>
   </div>
 
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-  <div class="card-artifact" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+  <img src="images/pavel-nekoranec.jpg" />
+  <div class="card-artifact">
     <h2>Sur le misanthrope</h2>
     <p>Pavel Nekoranec</p>
   </div>
 
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-  <div class="card-artifact" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+  <img src="images/jeremy-lishner.jpg" />
+  <div class="card-artifact">
     <h2>Photograph</h2>
     <p>Jeremy Lishner</p>
   </div>
