updated navbar, show, pages controller and created about pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,8 @@
   <div class="container">
     <h1>Welcome to Art House Auctions!</h1>
     <p>Buy & sell art the easy way.</p>
-    <a class="btn btn-ghost" href="#">Find out more</a>
+   <!--  <a class="btn btn-ghost" href="#">Find out more</a> -->
+    <%= link_to "Find out more", about_path, class: "btn btn-ghost" %>
     <!-- <a class="btn btn-ghost" href="#">Sign in</a> -->
   </div>
 </div>
