--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,10 +4,11 @@
 
 // @import "navbar";
 
+@import "banner";
 @import "button";
+@import "card-artifact";
+@import "card-grid-artifact";
 @import "card";
 @import "cards";
 @import "footer";
 @import "navbar";
-@import "banner";
-
