--- a/app/views/shared/_card-grid-artifact.html.erb
+++ b/app/views/shared/_card-grid-artifact.html.erb
@@ -1,17 +1,17 @@
 <div class="card-grid-artifact">
-  <img src="images/michael_angelo.jpg" />
+  <%= image_tag "michael_angelo.jpg", width: 300 %>
   <div class="card-artifact">
     <h2>Palace of Versailles</h2>
     <p>Michael Angelo</p>
   </div>
 
-  <img src="images/pavel-nekoranec.jpg" />
+  <%= image_tag "pavel-nekoranec.jpg", width: 300 %>
   <div class="card-artifact">
     <h2>Sur le misanthrope</h2>
     <p>Pavel Nekoranec</p>
   </div>
 
-  <img src="images/jeremy-lishner.jpg" />
+  <%= image_tag"jeremy-lishner.jpg", width: 300 %>
   <div class="card-artifact">
     <h2>Photograph</h2>
     <p>Jeremy Lishner</p>
