cloudinary setup updated for development

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :year %>
     <%= f.input :description %>
     <%= f.input :starting_value %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+     <%= f.input :photo, as: :file %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
 
