--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -1,14 +1,12 @@
 <!-- This is a global variable - we need to add @ - for us to create an artifact -->
 <h1>Details of <%= @artifact.name %></h1>
 <ul>
-<%= @artifact.artist  %>
-<%= @artifact.year  %>
-<%= @artifact.description  %>
-<%= @artifact.starting_value  %>
-<% @article.photos.each do |photo| %>
-  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+  <%= @artifact.artist  %>
+  <%= @artifact.year  %>
+  <%= @artifact.description  %>
+  <%= @artifact.starting_value  %>
+  <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
 <% end %>
-
 </ul>
 
 <%= link_to "Remove this artifact", article_path(@artifact), method: :delete, data: { confirm: "Really?!"} %>
