--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -5,7 +5,7 @@
   <%= @artifact.year  %>
   <%= @artifact.description  %>
   <%= @artifact.starting_value  %>
-  <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+  <%= cl_image_tag @artifact.photo.key, height: 300, width: 400, crop: :fill %>
 <% end %>
 </ul>
 
