--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,4 +1,5 @@
-<div class=“banner” style=“background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4) img src=“images/banner_homepage.jpg”>  <div class="container">
+<div class=“banner” >
+  <div class="container">
     <h1>Welcome to Arthouse Auctions!</h1>
     <p>Buy and sell art the easy way.</p>
   </div>
