--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
-<%= render 'banner' %>
+
+<div class=“banner” >
+  <div class="container">
+    <h1>Welcome to Arthouse Auctions!</h1>
+    <p>Buy and sell art the easy way.</p>
+  </div>
+</div>
 
 <%= render 'shared/card-grid-artifact' %>
