--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,9 @@
 .banner {
-  background-image: url("/images/banner_homepage.jpg");
+  // background-image: asset_url("banner_homepage.jpg");
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  margin-bottom: 30px;
 }
 
 .banner h1 {
@@ -11,11 +12,12 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 40px;
   font-weight: bold;
+  text-shadow: 1px 1px 2px black;
 }
 
 .banner p {
   font-size: 30px;
   color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  opacity: .9;
+  text-shadow: 1px 1px 2px black;
 }
