--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,6 +1,8 @@
-<%= simple_form_for([@artifact, @bid]) do |f| %>
-    <%= f.input :value %>
-    <%= f.button :submit, class: "btn btn-primary" %>
-  <% end %>
+<div class="container">
+  <%= simple_form_for([@artifact, @bid]) do |f| %>
+      <h1><%= f.input :value %></h1>
+      <%= f.button :submit, class: "btn btn-ghost" %>
+    <% end %>
 
-  <%= link_to "Go back", artifact_path(@artifact)  %>
+    <%= link_to "Go back", artifact_path(@artifact), class: "btn btn-ghost"  %>
+</div>
