--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class=“banner” >
+<div class="banner" style= "background-image: asset-url(banner_homepage.jpg)" >
   <div class="container">
     <h1>Welcome to Arthouse Auctions!</h1>
     <p>Buy and sell art the easy way.</p>
