fixed images upload

--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -1,5 +1,5 @@
-<!-- This is a global variable - we need to add @ - for us to create an artifact -->
 <div class="container">
+  <%= cl_image_tag @artifact.photo.key, height: 300, width: 400, crop: :fill %>
   <h1>Details of <%= @artifact.name %></h1>
   <ul>
     <li><%= @artifact.artist  %></li>
