--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -3,10 +3,10 @@
   <div class="card-grid-artifact">
     <% @artifacts.each do |artifact| %>
       <div class="card-artifact">
-        <h1><%= link_to artifact.name, artifact_path(artifact)  %></h1>
-        <h4><%= artifact.artist  %></h4>
-        <h4><%= artifact.year  %></h4>
-        <h4><%= artifact.starting_value  %></h4>
+        <h1><%= link_to artifact.name.capitalize, artifact_path(artifact)  %></h1>
+        <p>Artist: <%= artifact.artist  %></p>
+        <p>Year: <%= artifact.year  %></p>
+        <p>Starting value: <%= artifact.starting_value  %>€</p>
       </div>
   <% end %>
   </div>
