--- a/app/views/shared/_card-grid-artifact.html.erb
+++ b/app/views/shared/_card-grid-artifact.html.erb
@@ -1,18 +1,16 @@
 <div class="card-grid-artifact">
   <div class="card-artifact">
-  <%= image_tag "michael_angelo.jpg", width: 300 %>
+    <%= image_tag "michael_angelo.jpg", width: 200, class: "card-image" %>
     <h2>Palace of Versailles</h2>
     <p>Michael Angelo</p>
   </div>
-
   <div class="card-artifact">
-  <%= image_tag "pavel-nekoranec.jpg", width: 300 %>
+    <%= image_tag "pavel-nekoranec.jpg", width: 200, class: "card-image" %>
     <h2>Sur le misanthrope</h2>
     <p>Pavel Nekoranec</p>
   </div>
-
   <div class="card-artifact">
-  <%= image_tag"jeremy-lishner.jpg", width: 300 %>
+    <%= image_tag"jeremy-lishner.jpg", width: 200, class: "card-image" %>
     <h2>Photograph</h2>
     <p>Jeremy Lishner</p>
   </div>
