--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -2,14 +2,14 @@
   <% if @artifact.photo.attached? %>
     <%= cl_image_tag @artifact.photo.key, height: 300, width: 400, crop: :fill %>
   <% else %>
-  <%= image_tag("https://images.unsplash.com/photo-1580711465053-6757198851cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2254&q=80", width: 400, height: 300, crop: :fill) %>
-    <% end %>
+    <%= image_tag("https://images.unsplash.com/photo-1580711465053-6757198851cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2254&q=80", width: 400, height: 300, crop: :fill) %>
+  <% end %>
   <h1>Details of <%= @artifact.name %></h1>
   <ul>
-    <li><%= @artifact.artist  %></li>
-    <li><%= @artifact.year  %></li>
-    <li><%= @artifact.description  %></li>
-    <li><%= @artifact.starting_value  %></li>
+    <li>Artist: <%= @artifact.artist  %></li>
+    <li>Year: <%= @artifact.year  %></li>
+    <li>Description: <%= @artifact.description  %></li>
+    <li>Starting value: <%= @artifact.starting_value  %>€</li>
   </ul>
 
 <%= link_to "Place a bid", new_artifact_bid_path(@artifact), class: "btn btn-ghost"  %>
