updates for show page etc front-end

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,8 +9,10 @@
 @import "card-artifact";
 @import "card-grid-artifact";
 @import "card";
+@import "card-details";
 @import "cards";
 @import "container";
+@import "container-show-details";
 @import "footer";
 @import "navbar";
 @import "login";
