--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -6,8 +6,8 @@
       <%= f.input :description %>
       <%= f.input :starting_value %>
        <%= f.input :photo, as: :file %>
-      <%= f.button :submit, class: "btn btn-primary" %>
+      <%= f.button :submit, class: "btn btn-ghost" %>
     <% end %>
 
-    <%= link_to "Go back", artifacts_path  %>
+    <%= link_to "Go back", artifacts_path, class: "btn btn-ghost" %>
 </div>
