--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -13,6 +13,9 @@
   </ul>
 
 <%= link_to "Place a bid", new_artifact_bid_path(@artifact), class: "btn btn-ghost"  %>
+  <% if policy(Bid).create?  %>
+    <%= link_to "New bid", artifact_bids_path %>
+  <% end %>
 <%= link_to "Remove this artifact", artifact_path(@artifact), method: :delete, data: { confirm: "Really?!"}, class: "btn btn-ghost" %>
 <%= link_to "Go back", artifacts_path, class: "btn btn-ghost"  %>
 
