--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,5 +15,6 @@
 @import "container-show-details";
 @import "footer";
 @import "navbar";
+@import "red-bottom-border";
 @import "login";
 @import "signup";
