--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,14 +1,24 @@
-<% @artifacts.each do |artifact| %>
-<h2><%= artifact.name %></h2>
-<%= artifact.id %>
-<ul>
-<% artifact.bids.each do |bid| %>
-  <% if bid.status == nil %>
-  <li><%= bid.value %>
-    <%= link_to "Accept", accept_bid_path(bid) %>
-    <%= link_to "Reject", reject_bid_path(bid) %>
-  <% end %>
-  </li>
-<% end %>
-</ul>
-<% end %>
+<h1>Welcome back to Arthouse Auctions!</h1>
+
+<div class="container">
+  <h4>Here are all your bids*:</h4>
+  <p>*Keep in mind that when accepting one bid, all the other bids will be rejected automatically. </p>
+  <div class="cards">
+    <div>
+      <% @artifacts.each do |artifact| %>
+        <h4><%= artifact.name %></h4>
+        <p>Starting value: <%= artifact.starting_value %>€</p>
+        <ul>
+          <% artifact.bids.each do |bid| %>
+            <% if bid.status == nil %>
+            <li><p><%= bid.value %>€</p>
+              <%= link_to "Accept", accept_bid_path(bid), class: "btn btn-ghost btn-sm" %>
+              <%= link_to "Reject", reject_bid_path(bid), class: "btn btn-ghost btn-sm" %>
+            <% end %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+</div>
