updated version with valerie

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,3 +11,25 @@
 .btn-ghost:hover {
   opacity: 1;
 }
+
+
+.btn-light {
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+}
+
+.btn-light:hover {
+  opacity: 1;
+}
+
+
+.btn-danger {
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+}
+
+.btn-danger:hover {
+  opacity: 1;
+}
