--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h1>Welcome to Arthouse Auctions!</h1>
     <p>Buy and sell art the easy way.</p>
+    <%= link_to "View all artifacts", artifacts_path, class: "btn btn-light" %>
   </div>
 </div>
 
