--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -15,13 +15,13 @@
           <br>
           <li>Description: <%= @artifact.description  %></li>
           <br>
-          <li>Starting value: <%= @artifact.starting_value  %>€</li>
+          <li>Starting value: <%= number_with_delimiter(@artifact.starting_value, delimiter: ".") %> €</li>
         </ul>
       </div>
 
       <% if @bids.present? && @bids.value > @artifact.starting_value %>
       <br>
-        <h4>Highest bid: <%= @bids.value %> <i class="fas fa-euro-sign"></i></h4>
+        <h4>Highest bid: <%=  number_with_delimiter(@bids.value, delimiter: ".") %> <i class="fas fa-euro-sign"></i></h4>
       <% end %>
 
     <div class="form-bid">
@@ -31,9 +31,7 @@
         <%= f.button :submit, "Submit", class: "btn btn-danger", style: "margin-bottom: 15px;" %>
         <% end %>
       <% end %>
-
       </div>
-
     </div>
   </div>
 
