--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container-dashboard">
     <div class="container card-overview-dashboard">
-      <h1>Welcome back, User!</h1>
+      <h1>Welcome back, <%= current_user.name %>!</h1>
     </div>
     <div class="card-overview-dashboard">
       <h4><%=  %> Artifacts</h4>
