--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
 <h1>Here's a list of all our artifacts:</h1>
-  <div class="row">
+<%= simple_form_for :search, url: artifacts_path, method: :get do |f| %>
+  <div class="search-form-control form-group">
+    <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Search art & objects" />
+    <button name="button" type="submit" class="btn btn-flat">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
+<% end %>
+
+  <!-- <div class="row">
     <div class="col-6">
     </div>
     <div class="col-9">
@@ -10,12 +19,12 @@
         <i class="fas fa-search" aria-hidden="true"></i>
       </form>
     </div>
-  </div>
+  </div> -->
   <div class="card-grid-artifact">
     <% @artifacts.each do |artifact| %>
       <%= link_to artifact_path(artifact) do %>
       <div class="card-trip">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%= cl_image_tag artifact.photo.key, crop: :fill %>
         <div class="card-trip-infos">
           <div>
             <h2> <%= artifact.name %></h2>
