changed index page

--- a/app/views/artifacts/index.html.erb
+++ b/app/views/artifacts/index.html.erb
@@ -1,31 +1,44 @@
 <div class="container">
-<h1>Here's a list of all our artifacts:</h1>
-  <div class="row">
-    <div class="col-6">
-    </div>
-    <div class="col-9">
-      <form class="form-inline" action="artifacts">
+  <div class="header">
+    <h1>Here are all <%= @artifacts.size %> artifacts:</h1>
+  </div>
+    <div class="search">
+      <div class="row">
+        <div class="col-6">
+        </div>
+      <div class="col-9">
+        <form class="form-inline" action="artifacts">
         <input class="form-control form-control-sm mr-1 w-75" type="text" name="query" placeholder="Search"
           aria-label="Search">
         <i class="fas fa-search" aria-hidden="true"></i>
-      </form>
+        </form>
+      </div>
+      </div>
     </div>
-  </div>
   <div class="card-grid-artifact">
     <% @artifacts.each do |artifact| %>
       <%= link_to artifact_path(artifact) do %>
-      <div class="card-trip">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+
+      <div class="card-trip-index">
+        <% if artifact.photo.attached? %>
+          <%= cl_image_tag artifact.photo.key, height: 600, width: 500, crop: :fill %>
+        <% else %>
+          <%= image_tag("https://images.unsplash.com/photo-1580711465053-6757198851cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2254&q=80", width: 600, height: 500, crop: :fill) %>
+        <% end %>
+        <div class="index-infos">
         <div class="card-trip-infos">
           <div>
             <h2> <%= artifact.name %></h2>
             <p>Made by <%= artifact.artist %> in <%= artifact.year %></p>
           </div>
-          <h2 class="card-trip-pricing"><%= artifact.starting_value %>€</h2>
+          <h2 class="card-trip-pricing"><%= number_with_delimiter(artifact.starting_value, delimiter: ".") %> €</h2>
           <div class="card-trip-user bid-count"><%= artifact.bids.count %></div>
         </div>
+      </div>
       </div>
     <% end %>
   <% end %>
   </div>
 </div>
+
+
