design create new artifact page

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-  <h4>Add your own artifact:</h4>
+  <div class="create-artifact">
+    <h4>Add your own artifact:</h4>
+  </div>
   <%= simple_form_for(@artifact) do |f| %>
       <%= f.input :name %>
       <%= f.input :artist %>
