dashboard final changes

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,6 +12,22 @@
   opacity: 1;
 }
 
+.btn-ghost.btn-sm {
+  color: #4A4A4A;
+  border: 1px solid #4A4A4A;
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.btn-ghost.btn-sm:hover {
+  opacity: 3;
+  color: rgba(255, 0, 0, 1);
+  border: 1px solid rgba(255, 0, 0, 1);
+}
+
 
 .btn-light {
   padding: 8px 24px;
@@ -21,6 +37,9 @@
 
 .btn-light:hover {
   opacity: 1;
+  color: rgba(255, 0, 0, 1);
+  border: 1px solid rgba(255, 0, 0, 1);
+  background-color: white;
 }
 
 
