--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -7,7 +7,7 @@
       <%= f.input :description %>
       <%= f.input :starting_value %>
        <%= f.input :photo, as: :file %>
-      <%= f.button :submit, class: "btn btn-ghost" %>
+      <%= f.button :submit, class: "btn btn-ghost btn-sm" %>
     <% end %>
 
     <%= link_to "Go back", artifacts_path, class: "btn btn-ghost", style: "margin-top: 15px;" %>
