--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,7 +3,12 @@
 }
 
 .container-dashboard {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-gap: 16px;
+  display: flex;
+}
+
+.container-table {
+  margin-top: 30px;
+  background-color: #FFFFFF;
+  border-top: solid 3px white;
+  padding-top: 50px;
 }
