--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,67 +1,93 @@
 <div class="container">
   <div class="container-dashboard">
-    <div class="container card-overview-dashboard">
-      <h1>Welcome back, <%= current_user.name %>!</h1>
+    <div class="welcome dashboard-card">
+      <h1>Welcome back, <%= current_user.name %>! 👩🏽‍🎨</h1>
+      <hr>
     </div>
     <div class="card-overview-dashboard">
-      <h4><%=  %> Artifacts</h4>
-      <h4><%=  %> Offers </h4>
-      <h4><%=  %> Bids</h4>
+        <div class="dashboard-card">
+          <h4> Artifacts</h4>
+          <hr style = "border: 0.5px solid rgba(255, 0, 0, 0.5)">
+          <h4><%= @artifacts.count %></h4>
+        </div>
+        <div class="dashboard-card">
+          <h4> Offers </h4>
+          <hr style = "border: 0.5px solid rgba(255, 0, 0, 0.5)">
+          <h4><%= @incoming_bids.count %></h4>
+        </div>
+      <div class="dashboard-card">
+        <h4> Bids</h4>
+        <hr style = "border: 0.5px solid rgba(255, 0, 0, 0.5)">
+        <h4><%= @outgoing_bids.count %></h4>
+      </div>
     </div>
   </div>
 
-  <h4>Here are all your bids*:</h4>
-  <p>*Keep in mind that when accepting one bid, all the other bids will be rejected automatically. </p>
+<div class="bid-overview-card">
+  <h4>Here's a list of all your artifacts:</h4>
+  <hr style = "border-bottom: 2px solid rgba(255, 0, 0, 0.5)">
 
-  <div class="cards">
-    <div>
-      <% @artifacts.each do |artifact| %>
-        <h4><%= artifact.name %></h4>
-        <p>Starting value: <%= artifact.starting_value %>€</p>
-        <ul>
-          <% artifact.bids.each do |bid| %>
-          <div>
-            <% if bid.status == nil %>
-            <li><p><%= bid.value %>€</p>
-              <%= link_to "Accept", accept_bid_path(bid), class: "btn btn-ghost btn-sm" %>
-              <%= link_to "Reject", reject_bid_path(bid), class: "btn btn-ghost btn-sm" %>
+  <% @artifacts.each do |artifact| %>
+    <div class="card-product-list-of-artifacts">
+        <% if artifact.photo.attached? %>
+          <%= cl_image_tag artifact.photo.key, height: 200, width: 166, crop: :fill %>
+        <% else %>
+          <%= image_tag("https://images.unsplash.com/photo-1580711465053-6757198851cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2254&q=80", width: 200, height: 166, crop: :fill) %>
+        <% end %>
+    <div style="margin-left: 16px; margin-right: 70px">
+      <h2><%= artifact.name %></h2>
+      <p> Starting value: <%= number_with_delimiter(artifact.starting_value, delimiter: ".") %> €</p>
+    </div>
+    <div class="card-product-infos">
+      <table class="table table-borderless">
+          <thead>
+            <tr>
+              <th>Bid placed</th>
+              <th>User name</th>
+              <th colspan="3">Accept or reject?</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% artifact.bids.each do |bid| %>
+              <tr>
+                <td><%= number_with_delimiter(bid.value, delimiter: ".") %> €</td>
+                <td><%= bid.user.name %></td>
+                <td>
+                  <%= link_to '<i class="far fa-check-square" style= "color:green"></i>'.html_safe, accept_bid_path(bid) %>
+                </td>
+                <td>
+                  <%= link_to '<i class="fas fa-times" style= "color:red"></i>'.html_safe, reject_bid_path(bid) %>
+                </td>
+                <td></td>
+              </tr>
             <% end %>
-            </li>
-          </div>
-          <% end %>
-        </ul>
-      <% end %>
+          </tbody>
+        </table>
+
     </div>
   </div>
+
+  <% end %>
+
 </div>
 
-
-<table class="table table-borderless">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+    <div class="bid-overview-card">
+    <h4>Here are all the bids you have placed:</h4>
+    <hr>
+      <table class="table table-borderless">
+        <thead>
+          <tr>
+            <th>Starting value</th>
+            <th>Your bid</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @outgoing_bids.each do |bid| %>
+            <tr>
+              <td><%= number_with_delimiter(bid.artifact.starting_value, delimiter: ".") %> €</td>
+              <td><%= number_with_delimiter(bid.value, delimiter: ".") %> €</td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
