--- a/app/assets/stylesheets/components/_index-page.scss
+++ b/app/assets/stylesheets/components/_index-page.scss
@@ -88,7 +88,7 @@ a:hover {
   height: 120px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
+  // display: flex;
   align-items: center;
   margin-top: 30px;
   border-radius: 5px;
