--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -50,6 +50,7 @@
           <tbody>
             <% artifact.bids.each do |bid| %>
               <tr>
+                <% if bid.status == "pending" %>
                 <td><%= number_with_delimiter(bid.value, delimiter: ".") %> €</td>
                 <td><%= bid.user.name %></td>
                 <td>
@@ -60,6 +61,7 @@
                 </td>
                 <td></td>
               </tr>
+              <% end %>
             <% end %>
           </tbody>
         </table>
